--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         <script src="index.js"></script>
         <h1>
-            This is just for javascript
+            This is just for javascript HI I am trying to learn git
         </h1>
     </body>
 </html>
